# SMC_Refactored_V8

./: .cproject  .project  README.txt
BBot/: BB_SimWorld.cpp  CMakeLists.txt
cmakeModules/: FindBoost.cmake  FindXerces.cmake
data/: eye+head.txt  eye_BB.xml  eye_BB1.xml  eye_BB10.xml  eye_BB13.xml  eye_BB16.xml  eye_BB19.xml  eye_BB7.xml  eye_stats.txt  eyelog.txt  eyemotorlog.txt  head_stats.txt  headlog.txt  headmotorlog.txt  targetlog.txt
data/BBExperimentsTake1/: BB_stats.csv  eye+head.txt  eye_BB19.xml  eye_stats.txt  eyelog.txt  eyemotorlog.txt  head_stats.txt  headlog.txt  targetlog.txt
data/BBExperimentsTake2/: BB_stats.csv  eye+head.txt  eye_BB4.xml  eye_BB7.xml  eye_stats.txt  eyelog.txt  eyemotorlog.txt  head_stats.txt  headlog.txt  targetlog.txt  vorlog.txt
data/BBExperimentsTake3/: BB_stats.csv  eye_BB10.xml  eye_BB16.xml  eye_inputFields.txt  eye_links.txt  eye_outputFields.txt  eye_stats.txt  headlog.txt  headmotorlog.txt  targetlog.txt
data/BBLearningTake2/: eyeLinkLog.txt  eye_inputFields.txt  eye_links.txt  eye_outputFields.txt  eye_stats.txt  eyelog.txt  eyemotorlog.txt  head_stats.txt  headlog.txt  targetlog.txt
data/BBLearningTake3/: eye+head.txt  eye_BB1.xml  eyelog.txt  eyemotorlog.txt  head_stats.txt
data/fields/: allInputFields.txt  allOutputFields.txt
data/sim/: BB_stats.csv  eye+head.txt  eyeLinkLog.txt  eye_BBSim1.xml  eye_BBSim1919.xml  eye_inputFields.txt  eye_links.txt  eye_outputFields.txt  eye_stats.txt  eyemotorlog.txt  head_stats.txt  headlog.txt
data/sim/SimExperimentTake1/: BB_stats.csv  eye+head.txt  eye_BBSim7.xml  eye_stats.txt  eyelog.txt  eyemotorlog.txt  head_stats.txt  targetlog.txt
data/sim/SimExperimentTake3/: eye_BBSim13.xml  eye_BBSim4.xml  eye_BBSim7.xml  eyelog.txt  targetlog.txt
data/sim/SimExperimentsTake2_partial/: BB_stats.csv  eye+head.txt  eye_BBSim.xml  eye_BBSim10.xml  eye_BBSim16.xml  eye_inputFields.txt  eye_links.txt  eye_outputFields.txt  eye_stats.txt  eyelog.txt  eyemotorlog.txt  headLinkLog.txt  head_stats.txt  headlog.txt  targetlog.txt
data/sim/SimLearn1_wsicub/: simeye+head.txt  simeyeLinkLog.txt  simeye_BBSim1.xml  simeye_BBSim10.xml  simeye_BBSim13.xml  simeye_BBSim16.xml  simeye_BBSim19.xml  simeye_BBSim4.xml  simeye_stats.txt  simeyelog.txt  simeyemotorlog.txt  simhead_stats.txt  simtargetlog.txt
data/sim/simLearn2_schemaPC/: eye+head.txt  eyeLinkLog.txt  eye_stats.txt  eyelog.txt  eyemotorlog.txt  head_stats.txt  targetlog.txt
info/: CMakeLists.txt  mapOverlay  mapOverlay.cpp
kinematics/: CMakeLists.txt
kinematics/include/: CalcGazeChange.h  CalcHand.h  kinematicCalcs.h  matrixManipulation.h
kinematics/src/: CalcGazeChange.cpp  CalcHand.cpp  kinematicCalcs.cpp
maps/: CMakeLists.txt
maps/include/: CBaseMap.h  CXmlMap.h  FFM_IO.h  Field.h  FieldFieldMapping.h  GazeField.h  GazeMap.h  Gaze_IO.h  PolarField.h  ReachField.h  metricField.h
maps/src/: CBaseMap.cpp  CXmlMap.cpp  FFM_IO.cpp  Field.cpp  FieldFieldMapping.cpp  GazeField.cpp  GazeMap.cpp  Gaze_IO.cpp  PolarField.cpp  ReachField.cpp  allFieldExtract.cpp  fieldExtract.cpp  gazeExtract.cpp  gazeTester.cpp  metricField.cpp
skin/: righthand.ini  skinGui.xml
smc/: BBConnections.xml  CMakeLists.txt  Instructions.txt
smc/include/: Excitation.h  EyeHeadController.h  ReachController.h  ReachSpace.h  ReachSpaceJoyStick.h  ShortTermMemoryV2.h  Target.h  TorsoReach.h  VamTarget.h  armController.h  armReaching.h  common_cleverb4.h  dtat2.h  eyeController.h  eyeHeadCalc.h  eyeSaccading.h  graspController.h  handEyeCoordination.h  headController.h  headSaccading.h  params_config.h  smc_cleverb4.h  torsoCompensator.h  torsoController.h  torsoSaccading.h  tracker.h  utilities.h  vor2.h
smc/src/: ArmTester.cpp  BBcontroller.cpp  Excitation.cpp  EyeHeadController.cpp  ReachController.cpp  ShortTermMemoryV2.cpp  TactileGrasp.cpp  TorsoReach.cpp  VamTarget.cpp  armController.cpp  armReaching.cpp  demoVid.cpp  emotionController.cpp  eyeController.cpp  eyeHeadCalc.cpp  eyeSaccading.cpp  graspController.cpp  handEyeCoordination.cpp  headController.cpp  headSaccading.cpp  learningMenu.cpp  monitor.h  rpcControllerV2.cpp  rpcControllerV3.cpp  smc_cleverb4.cpp  target.cpp  testFunctions.cpp  torsoController.cpp  torsoSaccading.cpp  utilities.cpp
vision/: CMakeLists.txt  Makefile_short  Readme.txt  colourVision.xml  colourVisionSim.xml  frame001.ppm  gazeViewLive.cpp  motion.cpp  opencv_example.cpp  vision  vision.ppm  vision4.cpp  vision4_alt.cpp  vision6.cpp  vision6.h  visionSim  vision_multi.cpp
