CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(YARP REQUIRED)
INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS})


ADD_EXECUTABLE(vision vision4.cpp)
ADD_EXECUTABLE(visionSim vision4_alt.cpp)
ADD_EXECUTABLE(gazeViewLive gazeViewLive.cpp)

TARGET_LINK_LIBRARIES(vision ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(visionSim ${YARP_LIBRARIES})
TARGET_LINK_LIBRARIES(gazeViewLive ${YARP_LIBRARIES})



INSTALL_TARGETS($ENV{ICUB_DIR}/bin vision)
